<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="label_settings">Settings</string>

    <string name="button_clear">AC</string>
    <string name="button_switch">+/-</string>
    <string name="button_percent">%</string>
    <string name="button_divide">/</string>
    <string name="button_multi">*</string>
    <string name="button_minus">-</string>
    <string name="button_plus">+</string>
    <string name="button_equals">=</string>
    <string name="button_dot">.</string>

    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>


    <string name="menu_settings">Settings</string>

    <string name="pref_about">About</string>
    <string name="pref_display_font">Change Display Font</string>
    <string name="pref_button_font">Change Button Font</string>
</resources>
