<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right|center"
            android:textSize="24sp"
            android:id="@+id/history" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="0.0"
            android:gravity="right|center"
            android:textSize="30sp"
            android:textColor="@android:color/black"
            android:id="@+id/result" />
    </LinearLayout>
    <LinearLayout
        style="@style/VerticalLine" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <Button
            android:id="@+id/button_clear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_clear"
            style="@style/CommandButton"
            android:textColor="@color/colorAccent"
            android:layout_weight="1"/>
        <LinearLayout style="@style/HorizontalLine" />
        <Button
            android:id="@+id/button_switch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_switch"
            style="@style/CommandButton"
            android:layout_weight="1"/>
        <LinearLayout style="@style/HorizontalLine" />
        <Button
            android:id="@+id/button_percent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_percent"
            style="@style/CommandButton"
            android:layout_weight="1"/>
        <LinearLayout style="@style/HorizontalLine" />
        <Button
            android:id="@+id/button_divide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_divide"
            style="@style/CommandButton"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        style="@style/VerticalLine" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <Button
            android:id="@+id/button_7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_7"
            style="@style/NumberButton"
            android:layout_weight="1"/>
        <LinearLayout style="@style/HorizontalLine" />
        <Button
            android:id="@+id/button_8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_8"
            style="@style/NumberButton"
            android:layout_weight="1"/>
        <LinearLayout style="@style/HorizontalLine" />
        <Button
            android:id="@+id/button_9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_9"
            style="@style/NumberButton"
            android:layout_weight="1"/>
        <LinearLayout style="@style/HorizontalLine" />
        <Button
            android:id="@+id/button_multi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_multi"
            style="@style/CommandButton"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        style="@style/VerticalLine" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <Button
            android:id="@+id/button_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_4"
            style="@style/NumberButton"
            android:layout_weight="1"/>
        <LinearLayout style="@style/HorizontalLine" />
        <Button
            android:id="@+id/button_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_5"
            style="@style/NumberButton"
            android:layout_weight="1"/>
        <LinearLayout style="@style/HorizontalLine" />
        <Button
            android:id="@+id/button_6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_6"
            style="@style/NumberButton"
            android:layout_weight="1"/>
        <LinearLayout style="@style/HorizontalLine" />
        <Button
            android:id="@+id/button_minus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_minus"
            style="@style/CommandButton"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        style="@style/VerticalLine" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <Button
            android:id="@+id/button_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_1"
            style="@style/NumberButton"
            android:layout_weight="1"/>
        <LinearLayout style="@style/HorizontalLine" />
        <Button
            android:id="@+id/button_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_2"
            style="@style/NumberButton"
            android:layout_weight="1"/>
        <LinearLayout style="@style/HorizontalLine" />
        <Button
            android:id="@+id/button_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_3"
            style="@style/NumberButton"
            android:layout_weight="1"/>
        <LinearLayout style="@style/HorizontalLine" />
        <Button
            android:id="@+id/button_plus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_plus"
            style="@style/CommandButton"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        style="@style/VerticalLine" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <Button
            android:id="@+id/button_0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_0"
            style="@style/NumberButton"
            android:layout_weight="10"/>
        <LinearLayout style="@style/HorizontalLine" />
        <Button
            android:id="@+id/button_dot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_dot"
            style="@style/NumberButton"
            android:layout_weight="15"/>
        <LinearLayout style="@style/HorizontalLine" />
        <Button
            android:id="@+id/button_equals"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_equals"
            android:textColor="@color/colorAccent"
            style="@style/CommandButton"
            android:layout_weight="15"/>
    </LinearLayout>
</LinearLayout>
